--- a/HTML/Yho_bolg.html
+++ b/HTML/Yho_bolg.html
@@ -3,9 +3,34 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Yaohaiou博客</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<div id="banner" style="background: url(img/timg.jpg) top center; width: auto; height: auto;"></div>
+		<!-- banner -->
+		<div id="banner">
+			<img src="./img/timg.jpg" />
+		</div>
 		
+		<!-- 导航栏 -->
+		<div class="menu">
+			<ul>
+				<li><a href="home">首页</a></li>
+				<li><a href="about">个人中心</a></li>
+			</ul>
+		</div>
+		
+		<!-- 广告栏 -->
+		<div id="advert">
+			
+		</div>
+		
+		<!-- 正文 -->
+		<div class="left_list">
+			
+		</div>
+		
+		<div class="right_list">
+			
+		</div>
 	</body>
 </html>
